--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,4 +1,4 @@
 %li
-  %p= "Email : #{@user.email}"
-  %p= "First Name: #{@user.first_name}"
-  %p= "Last Name: #{@user.last_name}"
+  %p= "Email : #{user.email}"
+  %p= "First Name: #{user.first_name}"
+  %p= "Last Name: #{user.last_name}"
