--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -9,7 +9,8 @@
       %td= link_to 'Edit', edit_user_path(user)
       %td= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete
   
-  %p= "Email : #{user.email}"
+  %p
+    = "Email : #{user.email}"
     %br
     = "First Name: #{user.first_name}"
     %br
