--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -21,3 +21,6 @@
     = "Billing Address: #{user.billing_address}"
     %br
     = "Phone #: #{user.company_phone_number}"
+    %ul
+      =render user.resources
+    
