--- a/app/views/resources/show.html.haml
+++ b/app/views/resources/show.html.haml
@@ -1,6 +1,9 @@
 %p#notice= notice
 
 
+%ul
+  = render @resource
+
 = link_to 'Edit', edit_resource_path(@resource)
 \|
 = link_to 'Back', resources_path
