--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -1,16 +1,8 @@
 %h1 Listing resources
 
-%table
-  %tr
-    %th
-    %th
-    %th
 
-  - @resources.each do |resource|
-    %tr
-      %td= link_to 'Show', resource
-      %td= link_to 'Edit', edit_resource_path(resource)
-      %td= link_to 'Destroy', resource, :confirm => 'Are you sure?', :method => :delete
+%ul
+  = render @resources
 
 %br
 
