--- a/app/views/resources/_resource.html.haml
+++ b/app/views/resources/_resource.html.haml
@@ -16,4 +16,4 @@
     %br
     = "Price Plan: #{render resource.price_plan unless !resource.price_plan}"
     %br
-    = "Location: #{render resource.location unless resource.location}"
+    = "Location: #{render resource.location unless !resource.location}"
