--- a/app/views/parking_spots/_form.html.haml
+++ b/app/views/parking_spots/_form.html.haml
@@ -1,5 +1,5 @@
 
-=form_tag({:controller => "parking_spots", :action => "create"}, :method => "post")
+=form_tag({:controller => "parking_spots", :action => "create"}, :method => "post") do
   
   ="Latitude "
   =text_field(:location, :latitude)
