--- a/app/views/resources/_resource.html.haml
+++ b/app/views/resources/_resource.html.haml
@@ -14,6 +14,6 @@
     %br
     = "Capacity: #{resource.capacity}"
     %br
-    = "Price Plan: #{render resource.price_plan unless !resource.price_plan}"
+    = "Price Plan: $#{resource.price_plan.price_per_hour unless !resource.price_plan}/hr"
     %br
-    = "Location: #{render resource.location unless !resource.location}"
+    = "Location: #{resource.location.location_name unless !resource.location}"
