--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,6 @@
 %h1 Home#index
 %p Find me in app/views/home/index.html.haml
 
-%p Links: 
+%p 
+  Links: 
   #{ link_to 'Parking Spots', parking_spots_path}
