--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,9 @@
 %h1 Home#index
 %p Find me in app/views/home/index.html.haml
-
+%hr
 %p 
   Links: 
-  #{ link_to 'Parking Spots', parking_spots_path}
+  %br
+  #{ link_to 'New Parking Spot', http://parkify-rails.herokuapp.com/parking_spots/new }
+  %br
+  #{ link_to 'Admin Panel', http://parkify-rails.herokuapp.com/admin }
