Adding ability to make spot from account

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,6 +4,6 @@
 %p 
   Links: 
   %br
-  #{ link_to 'New Parking Spot', http://parkify-rails.herokuapp.com/parking_spots/new }
+  #{ link_to 'New Parking Spot', 'http://parkify-rails.herokuapp.com/parking_spots/new' }
   %br
-  #{ link_to 'Admin Panel', http://parkify-rails.herokuapp.com/admin }
+  #{ link_to 'Admin Panel', 'http://parkify-rails.herokuapp.com/admin' }
