Adding ability to make spot from account

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-<%= yield %>
+  <% if user_signed_in? %>
+    <div>Signed in as... <%= current_user.email %></div>
+  <% end %>
+  
+  <%= yield %>
 
 </body>
 </html>
