--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
   <% if user_signed_in? %>
     <div>Signed in as... <%= current_user.email %></div>
+    <br/>
+    <div><%= link_to "Log out", destroy_user_session_path, :method => :delete %>
   <% end %>
   
   <%= yield %>
