Adding ability to make spot from account

--- a/app/views/parking_spots/_form.html.haml
+++ b/app/views/parking_spots/_form.html.haml
@@ -9,8 +9,12 @@
   =text_field(:location, :longitude)
   %br
   
-  ="Local ID "
+  ="Location Name "
   =text_field(:location, :location_name)
+  %br
+  
+  ="Spot Title "
+  =text_field(:resource, :title)
   %br
   
   ="Price Per Hour "
