--- a/app/views/resources/_resource.html.haml
+++ b/app/views/resources/_resource.html.haml
@@ -10,6 +10,8 @@
       %td= link_to 'Destroy', resource, :confirm => 'Are you sure?', :method => :delete
   
   %p
+    ="#{resource.title}"
+    %br
     ="Description : #{resource.description}"
     %br
     = "Capacity: #{resource.capacity}"
