--- a/app/views/parking_spots/_form.html.haml
+++ b/app/views/parking_spots/_form.html.haml
@@ -28,24 +28,33 @@
   ="--------------------------------------"
   %br
   
-  ="Spot Layout"
+  ="Spot Layout: "
+  ="parallel"
   =radio_button(:quick_property, :spot_layout, "parallel")
+  ="regular"
   =radio_button(:quick_property, :spot_layout, "regular")
   %br
   
-  ="Spot Difficulty"
+  ="Spot Difficulty: "
+  ="easy"
   =radio_button(:quick_property, :spot_difficulty, "easy")
+  ="hard"
   =radio_button(:quick_property, :spot_difficulty, "hard")
   %br
   
-  ="Spot Coverage"
+  ="Spot Coverage: "
+  ="covered"
   =radio_button(:quick_property, :spot_coverage, "covered")
+  ="open_air"
   =radio_button(:quick_property, :spot_coverage, "open_air")
   %br
   
-  ="Spot Signage"
+  ="Spot Signage: "
+  ="sticker"
   =radio_button(:quick_property, :spot_signage, "sticker")
+  ="sign"
   =radio_button(:quick_property, :spot_signage, "sign")
+  ="custom_install"
   =radio_button(:quick_property, :spot_signage, "custom_install")
   %br
   
