--- a/app/views/offers/_form.html.haml
+++ b/app/views/offers/_form.html.haml
@@ -1,10 +1,18 @@
-= form_for @offer do |f|
-  -if @offer.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@offer.errors.count, "error")} prohibited this offer from being saved:"
-      %ul
-        - @offer.errors.full_messages.each do |msg|
-          %li= msg
+=form_tag({:controller => "offers", :action => "create"}, :method => "post") do
+  
+  ="Start Time "
+  =datetime_select(:offer, :start_time, :ampm => true)
+  %br
+  
+  ="End Time "
+  =datetime_select(:offer, :end_time, :ampm => true)
+  %br
+  
+  
+  ="Price per hour "
+  =number_field(:price_plan, :price)
+  %br
+  
 
-  .actions
-    = f.submit 'Save'
+  = submit_tag( 'Save' )
+  
