--- a/app/views/resources/_resource.html.haml
+++ b/app/views/resources/_resource.html.haml
@@ -8,7 +8,7 @@
       %td= link_to 'Show', resource
       %td= link_to 'Edit', edit_resource_path(resource)
       %td= link_to 'Destroy', resource, :confirm => 'Are you sure?', :method => :delete
-      %td= link_to 'View Offers', offers_path(resource)
+      %td= link_to 'View Offers', resource_offers_path(resource)
   %p
     ="#{resource.title}"
     %br
