--- a/app/views/offers/_form.html.haml
+++ b/app/views/offers/_form.html.haml
@@ -1,4 +1,4 @@
-=form_tag({:controller => "offers", :action => "create", :resource_id => @resource.id}, :method => "post") do
+=form_tag({:controller => "offers", :action => "create", :resource_id => params[:resource_id]}, :method => "post") do
   
   ="Start Time "
   =datetime_select(:offer, :start_time, :ampm => true)
