--- a/app/views/offers/_offer.html.haml
+++ b/app/views/offers/_offer.html.haml
@@ -5,17 +5,14 @@
       %th
       %th
     %tr
-      %td= link_to 'Show', resource
-      %td= link_to 'Edit', edit_resource_path(resource)
-      %td= link_to 'Destroy', resource, :confirm => 'Are you sure?', :method => :delete
-      %td= link_to 'View Offers', resource.offers
   %p
-    ="#{resource.title}"
+  
     %br
-    ="Description : #{resource.description}"
+    ="Start Time : #{offer.start_time}"
     %br
-    = "Capacity: #{resource.capacity}"
+    = "End Time: #{offer.end_time}"
     %br
-    = "Price Plan: $#{resource.price_plan.price_per_hour unless !resource.price_plan}/hr"
+    = "Capacity: #{offer.capacity unless !offer.price_plan}"
     %br
-    = "Location: #{resource.location.location_name unless !resource.location}"
+    = "Price Plan: $#{offer.price_plan.price_per_hour unless !offer.price_plan}/hr"
+    
