--- a/app/views/offers/show.html.haml
+++ b/app/views/offers/show.html.haml
@@ -1,6 +1,6 @@
 %p#notice= notice
 
 
-= link_to 'Edit', edit_offer_path(@offer)
+= link_to 'Edit', edit_resource_offer_path(@resource, @offer)
 \|
-= link_to 'Back', offers_path
+= link_to 'Back', resource_offers_path(@resource)
