Adding Offer logic

--- a/app/views/offers/edit.html.haml
+++ b/app/views/offers/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', [@resource, @offer]
+= link_to 'Show', resource_offer_path(@resource, @offer)
 \|
 = link_to 'Back', resource_offers_path(@resource)
