Adding static frontend

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,3 +7,7 @@
   #{ link_to 'New Parking Spot', 'http://parkify-rails.herokuapp.com/parking_spots/new' }!
   %br
   #{ link_to 'Admin Panel', 'http://parkify-rails.herokuapp.com/admin' }
+  
+%hr
+
+#{ img_tag '/assets/index_big_illustration.jpeg' }
