--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -10,7 +10,8 @@
 <body>
 
 <div class="container">
-  <div class="header"><a href="#"><img src="../../Documents/Designs/Design 7/blue_ribbon_top.png" alt="Insert Logo Here" name="Insert_logo" width="100%" height="90" id="Insert_logo" style="display:block;" /></a>
+  <div class="header">
+  <%= image_tag("/assets/blue_ribbon_top.png", :width="100%", :height="90px", :style="display:block;" %>
     <!-- end .header -->
   </div>
   
@@ -19,7 +20,10 @@
   <div class="content">
   
   
-  <div class="download-free-app-container"><img src="../../Documents/Designs/WebDesign2/download_free_app.png" width="313" height="91"></div>
+  <div class="download-free-app-container">
+  <%= image_tag("/assets/download_free_app.png", :width="313px", :height="91px", :style="display:block;" %>
+  
+  </div>
   
   <div class="nav-r">
   
@@ -32,8 +36,13 @@
   
   
   </div>
-  <div class="logo-container"><img src="../../Documents/Designs/WebDesign2/logo.png" width="385" height="161" alt="logo"></div>
+  <div class="logo-container">
+  <%= image_tag("/assets/logo.png", :width="385px", :height="161px", :style="display:block;" %>
+  
+  </div>
+  
     <div class="demo-container">
+     <%= image_tag("/assets/app_demo_1.png", :width="270px", :height="480px", :style="display:block;" %>
       <img src="../../Documents/Designs/WebDesign2/app_demo_1.png" width="270" height="480" alt="demo">
     </div>
     
@@ -54,7 +63,9 @@
     
     <!-- end .content -->
   </div>
-  <div class="footer"> <img src="../../Documents/Designs/Design 7/blue_ribbon_bottom.png" alt="Insert Logo Here" name="Insert_logo" width="100%" height="90" id="Insert_logo" style="display:block;" />
+  <div class="footer">
+     <%= image_tag("/assets/blue_ribbon_bottom.png", :width="100%", :height="90px", :style="display:block;" %>
+
     <!-- end .footer -->
   </div>
   <!-- end .container -->
