--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -11,7 +11,7 @@
 
 <div class="container">
   <div class="header">
-  <%= image_tag("/assets/blue_ribbon_top.png", :width="100%", :height="90px", :style="display:block;" %>
+  <%= image_tag("/assets/blue_ribbon_top.png", :width=>"100%", :height=>"90px", :style=>"display:block;" %>
     <!-- end .header -->
   </div>
   
@@ -21,7 +21,7 @@
   
   
   <div class="download-free-app-container">
-  <%= image_tag("/assets/download_free_app.png", :width="313px", :height="91px", :style="display:block;" %>
+  <%= image_tag("/assets/download_free_app.png", :width=>"313px", :height=>"91px", :style=>"display:block;" %>
   
   </div>
   
@@ -37,13 +37,13 @@
   
   </div>
   <div class="logo-container">
-  <%= image_tag("/assets/logo.png", :width="385px", :height="161px", :style="display:block;" %>
+  <%= image_tag("/assets/logo.png", :width=>"385px", :height=>"161px", :style=>"display:block;" %>
   
   </div>
   
     <div class="demo-container">
-     <%= image_tag("/assets/app_demo_1.png", :width="270px", :height="480px", :style="display:block;" %>
-      <img src="../../Documents/Designs/WebDesign2/app_demo_1.png" width="270" height="480" alt="demo">
+     <%= image_tag("/assets/app_demo_1.png", :width=>"270px", :height=>"480px", :style=>"display:block;" %>
+      <img src="../../Documents/Designs/WebDesign2/app_demo_1.png" width=>"270" height=>"480" alt="demo">
     </div>
     
     
@@ -64,7 +64,7 @@
     <!-- end .content -->
   </div>
   <div class="footer">
-     <%= image_tag("/assets/blue_ribbon_bottom.png", :width="100%", :height="90px", :style="display:block;" %>
+     <%= image_tag("/assets/blue_ribbon_bottom.png", :width=>"100%", :height=>"90px", :style=>"display:block;" %>
 
     <!-- end .footer -->
   </div>
