Adding static frontend

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -30,7 +30,7 @@
   	<ul class="nav">
       <li><%= link_to("Home", url_for(:action => 'index')) %> </li>
       <li><%= link_to("About Us", url_for(:action => 'about')) %></li>
-      <li><%= link_to("Blog", url_for(:action => 'blog')) %></li>
+      <li><%= link_to("Blog", "http:/wordpress.org//") %></li>
       <li><%= link_to("Contact Us", url_for(:action => 'contact')) %></li>
     </ul>
   
