Adding static frontend

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -156,3 +156,25 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* this changes the background
 	background:#9AD0FE;
 	color: #FFF;
 }
+
+.about-us-text-container {
+	position:absolute;
+	left:10px;
+	top:200px;
+}
+
+.contact-us-text-container {
+	position:absolute;
+	left:10px;
+	top:200px;
+}
+.privacy-text-container {
+	position:absolute;
+	left:10px;
+	top:200px;
+}
+.tos-text-container {
+	position:absolute;
+	left:10px;
+	top:200px;
+}
