--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,6 +1,9 @@
 
-  <div class="about-us-text-container">
-  Parkify was started by UC alumni who hated parking near campus and in the city. The staff at Parkify are experts on connecting spot owners with desparate drivers looking for valuable parking spaces.
+  <div class="contact-us-text-container">
+  For immediate assistance call: 1-855-Parkify<br/>
+  To reach us through email: <%= mail_to("info@parkify.me") %> <br/>
+  Find us on Twitter: @parkifyme<br/>
+  "Are you parkified yet?"
   </div>
   
   
