--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 
-  <div class="about-us-text-container">
-  Parkify was started by UC alumni who hated parking near campus and in the city. The staff at Parkify are experts on connecting spot owners with desparate drivers looking for valuable parking spaces.
+  <div class="download-free-app-container">
+  <%= image_tag("/assets/download_free_app.png", :width=>"313px", :height=>"91px", :style=>"display:block;") %>
   </div>
   
   
