Adding static frontend

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -161,6 +161,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* this changes the background
 	position:absolute;
 	left:10px;
 	top:200px;
+  max-width:300px;
 }
 
 .contact-us-text-container {
