--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -2,10 +2,9 @@
   <div class="contact-us-text-container">
   For immediate assistance call: 1-855-Parkify<br/>
   To reach us through email: <%= mail_to("info@parkify.me") %> <br/>
-  Find us on Twitter: @parkifyme<br/>
+  Find us on Twitter: <%= link_to "@parkifyme", "https://twitter.com/parkifyme" %> <br/>
   "Are you parkified yet?"
   </div>
-  
   
   <div class="logo-container">
   <%= image_tag("/assets/logo.png", :width=>"385px", :height=>"161px", :style=>"display:block;" )%>
