Adding static frontend

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,7 +1,7 @@
 
   <div class="contact-us-text-container">
   For immediate assistance call: 1-855-Parkify<br/>
-  To reach us through email: <%= mail_to("info@parkify.me") %> <br/>
+  To reach us through email: <%= mail_to("info@parkify.me", "info@parkify.me") %> <br/>
   Find us on Twitter: <%= link_to "@parkifyme", "https://twitter.com/parkifyme" %> <br/>
   "Are you parkified yet?"
   </div>
