Adding new static website

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,8 +8,8 @@
   <meta name="generator" content="2.0.945.165"/>
   <title>Parkify</title>
   <!-- CSS -->
-  <%= stylesheet_link_tag ("assets/css/site_global.css?4003109849", :type => "text/css") =>
-  <%= stylesheet_link_tag ("assets/css/index.css?378679106", :type => "text/css") =>
+  <%= stylesheet_link_tag ("assets/css/site_global.css?4003109849", :type => "text/css") %>
+  <%= stylesheet_link_tag ("assets/css/index.css?378679106", :type => "text/css") %>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = 'js';
