--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
   <!-- CSS -->
   <%= stylesheet_link_tag ("assets/css/site_global.css?4003109849", :type => "text/css") %>
   <%= stylesheet_link_tag ("assets/css/index.css?378679106", :type => "text/css") %>
-  <!-- Other scripts -->
+  <!-- Other script -->
   <script type="text/javascript">
    document.documentElement.className = 'js';
 </script>
