Fixing reset password functionality

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -16,8 +16,8 @@
     = f.label :last_name
     = f.text_field :last_name
   %p
-    = f.label :comapany_name
-    = f.text_field :comapany_name
+    = f.label :company_name
+    = f.text_field :company_name
     
   %p
     = f.label :billing_address
