Adding spot creation via csv

--- a/app/views/parking_spots/_form.html.haml
+++ b/app/views/parking_spots/_form.html.haml
@@ -25,6 +25,10 @@
   =text_field(:resource, :description)
   %br
   
+  ="Directions "
+  =text_field(:location, :directions)
+  %br
+  
   ="--------------------------------------"
   %br
   
