Adding spot creation via csv

--- a/app/views/parking_spots/_form.html.haml
+++ b/app/views/parking_spots/_form.html.haml
@@ -29,6 +29,10 @@
   =text_field(:location, :directions)
   %br
   
+  ="Address "
+  =text_field(:location, :address)
+  %br
+  
   ="--------------------------------------"
   %br
   
