Adding spot creation via csv

--- a/app/views/parking_spots/_form.html.haml
+++ b/app/views/parking_spots/_form.html.haml
@@ -66,6 +66,15 @@
   =radio_button(:quick_property, :spot_signage, "custom_install")
   %br
   
+  ="--------------------------------------"
+  %br
+  
+  ="Count "
+  =number_field(:extra, :count)
+  %br
 
+  ="--------------------------------------"
+  %br
+  
   = submit_tag( 'Subscribe' )
   
