Adding multiple spot creation

--- a/app/views/parking_spots/_form.html.haml
+++ b/app/views/parking_spots/_form.html.haml
@@ -30,7 +30,7 @@
   %br
   
   ="Address "
-  =text_field(:location, :address)
+  =text_field(:location, :location_address)
   %br
   
   ="--------------------------------------"
