--- a/app/views/user_mailer/payment_succeeded_email.html.erb
+++ b/app/views/user_mailer/payment_succeeded_email.html.erb
@@ -34,7 +34,7 @@
     <hr/>
     <p>
         <span style="font-weight:bold">Reservation Duration: </span><%= ((@acceptance.start_time.in_time_zone("Pacific Time (US & Canada)") - @acceptance.end_time.in_time_zone("Pacific Time (US & Canada)"))/18000).floor/2.0 %> hours<br/>
-        <span style="font-weight:bold">Time Booked: </span><%= @acceptance.start_time.in_time_zone("Pacific Time (US & Canada)").strftime(%l:%M %p) %> - <%= @acceptance.end_time.in_time_zone("Pacific Time (US & Canada)").strftime(%l:%M %p) %><br/>
+        <span style="font-weight:bold">Time Booked: </span><%= @acceptance.start_time.in_time_zone("Pacific Time (US & Canada)").strftime("%l:%M %p") %> - <%= @acceptance.end_time.in_time_zone("Pacific Time (US & Canada)").strftime("%l:%M %p") %><br/>
         <span style="font-weight:bold"><%= "$%0.2f" % (@acceptance.payment_info.amount_charged / 100.0) %></span>Charged to ************<%= @card.last4 %><br/>
     
         <span class="highlight-2">Time Booked: <br/>
