--- a/app/views/user_mailer/payment_succeeded_email.html.erb
+++ b/app/views/user_mailer/payment_succeeded_email.html.erb
@@ -29,22 +29,17 @@
     <p>
         <span style="font-weight:bold">Spot address: </span><%= @spot.location.location_address %><br/>
         <span style="font-weight:bold">Unique Spot ID: </span><%= @spot.pretty_id %><br/>
-        <span style="font-weight:bold">How to find your spot: </span><%= @spot.location.location_address %><br/>
+        <span style="font-weight:bold">How to find your spot: </span><%= @spot.location.directions %><br/>
     </p>
     <hr/>
     <p>
-        <span style="font-weight:bold">Reservation Duration: </span><%= ((@acceptance.start_time.in_time_zone("Pacific Time (US & Canada)") - @acceptance.end_time.in_time_zone("Pacific Time (US & Canada)"))/18000).floor/2.0 %> hours<br/>
+        <span style="font-weight:bold">Reservation Duration: </span><%= ((@acceptance.end_time.in_time_zone("Pacific Time (US & Canada)") - @acceptance.start_time.in_time_zone("Pacific Time (US & Canada)"))/18000).floor/2.0 %> hours<br/>
         <span style="font-weight:bold">Time Booked: </span><%= @acceptance.start_time.in_time_zone("Pacific Time (US & Canada)").strftime("%l:%M %p") %> - <%= @acceptance.end_time.in_time_zone("Pacific Time (US & Canada)").strftime("%l:%M %p") %><br/>
-        <span style="font-weight:bold"><%= "$%0.2f" % (@acceptance.payment_info.amount_charged / 100.0) %></span>Charged to ************<%= @card.last4 %><br/>
-    
-        <span class="highlight-2">Time Booked: <br/>
+        <span style="font-weight:bold"><%= "$%0.2f" % (@acceptance.payment_info.amount_charged / 100.0) %></span> Charged to ************<%= @card.last4 %><br/>
          
     </p>
     <hr/>
-    <p>Need Help? Call 1-855-Parkify or visit our site, <a href="http://www.parkify.me">parkify.me</a>.</p>
+    <p>Questions? Need help finding your spot? Call 1-855-Parkify or visit our site, <a href="http://www.parkify.me">parkify.me</a>.</p>
     <br/>
-    <br/>
-    <p>Thanks for reserving with us and have a great day!</p>
-    <p>Respectfully,<br/>-- The Parkify Team</p>
   </body>
 </html>
