--- a/app/views/user_mailer/payment_succeeded_email.html.erb
+++ b/app/views/user_mailer/payment_succeeded_email.html.erb
@@ -35,8 +35,9 @@
     <p>
         <span style="font-weight:bold">Reservation Duration: </span><%= ((@acceptance.end_time.in_time_zone("Pacific Time (US & Canada)") - @acceptance.start_time.in_time_zone("Pacific Time (US & Canada)"))/1800).floor/2.0 %> hours<br/>
         <span style="font-weight:bold">Time Booked: </span><%= @acceptance.start_time.in_time_zone("Pacific Time (US & Canada)").strftime("%l:%M %p") %> - <%= @acceptance.end_time.in_time_zone("Pacific Time (US & Canada)").strftime("%l:%M %p") %><br/>
-        <span style="font-weight:bold"><%= "$%0.2f" % (@acceptance.payment_info.amount_charged / 100.0) %></span> Charged to ************<%= @card.last4 %><br/>
-         
+        <span style="font-weight:bold"><%= @acceptance.payment_info.details %></span><br/>
+        <!--<span style="font-weight:bold"> <%= "$%0.2f" % (@acceptance.payment_info.amount_charged / 100.0) %></span> Charged to ************<%= @card.last4 %><br/>-->
+        
     </p>
     <hr/>
     <p>Questions? Need help finding your spot? Call 1-855-Parkify or visit our site, <a href="http://www.parkify.me">parkify.me</a>.</p>
