Adding credit system

--- a/app/views/user_mailer/payment_succeeded_email.html.erb
+++ b/app/views/user_mailer/payment_succeeded_email.html.erb
@@ -41,5 +41,5 @@
     <hr/>
     <p>Questions? Need help finding your spot? Call 1-855-Parkify or visit our site, <a href="http://www.parkify.me">parkify.me</a>.</p>
     <br/>
-  </body>
+  </body>f
 </html>
