--- a/app/views/user_mailer/payment_succeeded_email.html.erb
+++ b/app/views/user_mailer/payment_succeeded_email.html.erb
@@ -22,24 +22,24 @@
   <body>
     <h1>Dear <%= @user.first_name %> <%= @user.last_name %>, </h1>
     <p> 
-      You have successfully reserved a Parkify spot at <span class="highlight-1"><%= @spot.location.location_name %></span>. See Below for more information about your reservation.
+      You have successfully reserved a Parkify spot at <span class="highlight-1"><%= @spot.location_name %></span>. See Below for more information about your reservation.
     </p>
     <hr/>
     
     <p>
-        <span style="font-weight:bold">Spot address: </span><%= @spot.location.location_address %><br/>
+        <span style="font-weight:bold">Spot address: </span><%= @spot.location_address %><br/>
         <span style="font-weight:bold">Unique Spot ID: </span><%= @spot.pretty_id %><br/>
-        <span style="font-weight:bold">How to find your spot: </span><%= @spot.location.plain_directions %><br/>
+        <span style="font-weight:bold">How to find your spot: </span><%= @spot.plain_directions %><br/>
     </p>
     <hr/>
     <p>
         <span style="font-weight:bold">Reservation Duration: </span><%= ((@acceptance.end_time.in_time_zone("Pacific Time (US & Canada)") - @acceptance.start_time.in_time_zone("Pacific Time (US & Canada)"))/1800).floor/2.0 %> hours<br/>
         <span style="font-weight:bold">Time Booked: </span><%= @acceptance.start_time.in_time_zone("Pacific Time (US & Canada)").strftime("%l:%M %p") %> - <%= @acceptance.end_time.in_time_zone("Pacific Time (US & Canada)").strftime("%l:%M %p") %><br/>
-        <span style="font-weight:bold"><%= @acceptance.payment_info.details %></span><br/>
+        <span style="font-weight:bold"><%= @acceptance.details %></span><br/>
         
     </p>
     <hr/>
     <p>Questions? Need help finding your spot? Call 1-855-Parkify or visit our site, <a href="http://www.parkify.me">parkify.me</a>.</p>
     <br/>
-  </body>f
+  </body>
 </html>
